--- a/add_new_requisition.html
+++ b/add_new_requisition.html
@@ -180,7 +180,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="mb15">
-                                <a href="table.html" class="btn btn-sm btn-info btn-base float-right">
+                                <a href="#" class="btn btn-sm btn-info btn-base float-right">
                                     <i class="fa fa-list" aria-hidden="true"></i> &nbsp; Table List
                                 </a>
                             </div>
