--- a/project_management.html
+++ b/project_management.html
@@ -89,11 +89,15 @@
                         <i class="fas fa-bars"></i>
 
                     </button>
+
+
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <h5 class="text-center ml-5">View All projects</h5>
+
                         <ul class="nav navbar-nav ml-auto">
 
                             <li class="nav-item">
@@ -132,6 +136,7 @@
             <!--Profile Modal Start-->
             <!--End Modal: Login with Avatar Form-->
             <div class="layout_content">
+
                 <div class="container">
                     <div class="row">
                         <div class="col">
