add selet multi

--- a/login_form.html
+++ b/login_form.html
@@ -17,9 +17,8 @@
     <script src="repeater.js"></script>
 </head>
 
-<body>
-
-    <div class="login-bg-color">
+<body class="login-bg-color">
+    <div>
         <div class="container">
             <!-- Material form login -->
                     <div class="login-area">
