--- a/project_management.html
+++ b/project_management.html
@@ -27,6 +27,9 @@
             </div>
             <ul class="list-unstyled components">
                 <li>
+                    <a href="user_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> User Management RBA </a>
+                </li>
+                <li>
                     <a href="client management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Client Management </a>
                 </li>
                 <li>
@@ -73,8 +76,9 @@
                             <a href="add_new_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Requisition</a>
                         </li>
                         <li>
-                            <a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Requisition</a>
+                            <a href="requisition_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Requisition</a>
                         </li>
+                        <li><a href="edit_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Edit Requisition</a></li>
                     </ul>
                 </li>
             </ul>
@@ -102,7 +106,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
+                                    <i class="fa fa-bell" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
@@ -171,11 +175,11 @@
 															Munna
 														</span>
                                                 </td>
-                                                <td> Project Budget : <span class="base-color">  <a href="site_management.html"> 20,000</a> </span>
+                                                <td> Project Budget : <span class="base-color"> 20,000 </span>
 
                                                 </td>
                                                 <td>Project Status : <span class="base-color">Running</span> </td>
-                                                <td>Sites : <span class="base-color">5</span> </td>
+                                                <td>Sites : <span class="base-color"><a href="site_management.html">5</a> </span> </td>
                                                 <td>Total Requisition: <span class="base-color">50</span> </td>
                                             </tr>
                                             <tr>
@@ -253,7 +257,7 @@
 
                                                 </td>
                                                 <td>Project Status : <span class="base-color">Running</span> </td>
-                                                <td>Sites : <span class="base-color">5</span> </td>
+                                                <td>Sites : <span class="base-color"><a href="site_management.html">5</a> </span> </td>
                                                 <td>Total Requisition: <span class="base-color">50</span> </td>
                                             </tr>
                                             <tr>
