--- a/add_new_requisition.html
+++ b/add_new_requisition.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7a1c11509a.js" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
@@ -26,6 +27,9 @@
                 </h3>
             </div>
             <ul class="list-unstyled components">
+                <li>
+                    <a href="user_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> User Management RBA </a>
+                </li>
                 <li>
                     <a href="client management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Client Management </a>
                 </li>
@@ -75,6 +79,7 @@
                         <li>
                             <a href="requisition_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Requisition</a>
                         </li>
+                        <li><a href="edit_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Edit Requisition</a></li>
                     </ul>
                 </li>
             </ul>
@@ -96,7 +101,7 @@
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=" margin-right: 10px; font-size: 20px;"></i>
+                                    <i class="fa fa-bell" data-toggle="modal" data-target="#myModal" style=" margin-right: 10px; font-size: 20px;"></i>
                                 </a>
                                 <div class="modal" id="myModal">
                                     <div class="modal-dialog">
@@ -196,7 +201,7 @@
                                         <div class="col-md-4 col-sm-6">
                                             <div class="form-group">
                                                 <label for="name">Project</label><br>
-                                                <select class="form-control select2 select2-hidden-accessible" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                                                <select class="form-control" style="width: 100%;" tabindex="-1" aria-hidden="true">
                                                 <option value="volvo">Project A</option>
                                                 <option value="saab">Project B</option>
                                                 <option value="volvo">Project C</option>
@@ -207,7 +212,7 @@
                                         <div class="col-md-4 col-sm-6">
                                             <div class="form-group">
                                                 <label for="name">Site</label><br>
-                                                <select class="form-control select2 select2-hidden-accessible" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                                                <select class="form-control" style="width: 100%;" tabindex="-1" aria-hidden="true">
                                                 <option value="volvo">Site A</option>
                                                 <option value="saab">Site B</option>
                                                 <option value="volvo">Site C</option>
@@ -249,7 +254,7 @@
                                         <div class="col-md-4 col-sm-6">
                                             <div class="form-group">
                                                 <label for="name"> Payment type</label><br>
-                                                <select class="form-control select2 select2-hidden-accessible " style="width: 100%; " tabindex="-1 " aria-hidden="true">
+                                                <select class="form-control" style="width: 100%; " tabindex="-1 " aria-hidden="true">
                                                     <option value=" volvo "> Mobile banking</option>
                                                     <option value="saab ">check</option>
                                                     <option value="volvo ">cash</option>
@@ -313,7 +318,7 @@
                                         <div class="col-md-4 ">
                                             <div class="form-group">
                                                 <label for="name">Submitted By</label><br>
-                                                <select class="form-control select2 select2-hidden-accessible" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                                                <select class="form-control" style="width: 100%;" tabindex="-1" aria-hidden="true">
                                                     <option value="volvo">Mr A</option>
                                                     <option value="saab">Mr B</option>
                                                     <option value="volvo">Mr C</option>
@@ -325,7 +330,7 @@
                                         <div class="col-md-4 ">
                                             <div class="form-group">
                                                 <label for="name">Prepared By</label><br>
-                                                <select class="form-control select2 select2-hidden-accessible" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                                                <select class="form-control" style="width: 100%;" tabindex="-1" aria-hidden="true">
                                                     <option value="volvo">Mr A</option>
                                                     <option value="saab">Mr B</option>
                                                     <option value="volvo">Mr C</option>
@@ -454,30 +459,37 @@
         </div>
     </div>
     <!--Bootstrap CDN-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js ">
+    <script src="https://code.jquery.com/jquery-3.5.1.js">
     </script>
     <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js ">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js " integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV " crossorigin="anonymous ">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js ">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js">
     </script>
     <!-- for datatables -->
     <!-- jQuery library -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js "></script> -->
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js ">
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js">
     </script>
-    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js ">
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js ">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js">
     </script>
     <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js ">
+
+    <script type="text/javascript" src="js/myscript.js">
     </script>
-    <script type="text/javascript " src="js/myscript.js ">
+    <script src="js/js.js">
     </script>
-    <script src="js/js.js ">
+    <script>
+        $(document).ready(function() {
+            $('#example').DataTable();
+
+            $('.select2').select2({
+                closeOnSelect: false
+            });
+        });
+        $('select').selectpicker();
     </script>
     <script>
         $(document).ready(function() {
@@ -536,9 +548,6 @@
 
         });
     </script>
-</body>
-
-</html>cript>
 </body>
 
 </html>
