--- a/client management.html
+++ b/client management.html
@@ -24,7 +24,9 @@
             </div>
 
             <ul class="list-unstyled components">
-
+                <li>
+                    <a href="user_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> User Management RBA </a>
+                </li>
                 <li class="active">
                     <a href="client management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Client Management </a>
                 </li>
@@ -65,6 +67,7 @@
                     <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
                         <li><a href="add_new_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Requisition</a></li>
                         <li><a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Requisition</a></li>
+                        <li><a href="edit_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Edit Requisition</a></li>
                     </ul>
                 </li>
             </ul>
@@ -90,7 +93,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
+                                    <i class="fa fa-bell" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
