--- a/department_management.html
+++ b/department_management.html
@@ -23,7 +23,9 @@
             </div>
 
             <ul class="list-unstyled components">
-
+                <li>
+                    <a href="user_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> User Management RBA </a>
+                </li>
                 <li>
                     <a href="client management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Client
                     Management </a>
@@ -77,6 +79,7 @@
                             class="fa fa-angle-right"></i> Add New Requisition</a></li>
                         <li><a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i>
                         View All Requisition</a></li>
+                        <li><a href="edit_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Edit Requisition</a></li>
                     </ul>
                 </li>
             </ul>
@@ -102,7 +105,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
+                                    <i class="fa fa-bell" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
